--- a/content/talks/presentations/cki-2017.md
+++ b/content/talks/presentations/cki-2017.md
@@ -8,4 +8,4 @@ A recording of this talk wasn't made public, but you can view/download the talk 
 
 <br></br>
 
-{{< tweet 840146673577861120 >}}
+{{< tweet user="tinvaan" id="840146673577861120" >}}
